@@ -17,7 +17,8 @@ module Spec
         class << self
           def register_subjects
             language = SpecI18n.natural_language
-            language.subject_keywords.each do |key, values|
+            subject_and_expectation_keywords = language.subject_keywords.merge(language.expectation_keywords)
+            subject_and_expectation_keywords.each do |key, values|
               values.map { |value| alias_method value, key }
             end
           end
